--- a/S38Commit.html
+++ b/S38Commit.html
@@ -1,4 +1,5 @@
 /* This is a test of a file with HTML added */
+/* Now I will add HTML in the comment of the commit description.*/
 
 <div class="row">
 	<div class="nc-row-item">
