--- a/S38Commit.html
+++ b/S38Commit.html
@@ -1,6 +1,7 @@
 /* This is a test of a file with HTML added */
 /* Now I will add HTML in the comment of the commit description.*/
 /* Will commit multiple files.*/
+/* Here is a commit with changes to multiple files and adding a new one.*/
 
 <div class="row">
 	<div class="nc-row-item">
