--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="nc-row-item">
 		<div class="editor-label">
-			@Strings.Name
+			@Strings.Names
 		</div>
 		<div class="editor-field-container nc-disabled">
 			@Model.Name
