--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 			@Strings.Names
 		</div>
 		<div class="editor-field-container nc-disabled">
-			@Model.Name
+			@Model.Names
 		</div>
 	</div>
 </div>
